--- a/GS-SS.ini
+++ b/GS-SS.ini
@@ -40,7 +40,7 @@ custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇭🇰 v2ray香港 原
 custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🇭🇰 v2ray香港 原生大宽带`[]🇭🇰 v2ray香港原生`[]🇸🇬 v2ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🇭🇰 v2ray香港 原生大宽带`[]🇭🇰 v2ray香港原生`[]🇸🇬 v2ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🇭🇰 v2ray香港 原生大宽带`[]🇭🇰 v2ray香港原生`[]🇸🇬 v2ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🇭🇰 v2ray香港 原生大宽带`[]🇭🇰 v2ray香港原生`[]🇸🇬 v2ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 v2ray香港 原生大宽带`[]🇭🇰 v2ray香港原生`[]🇸🇬 v2ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇭🇰 v2ray香港 原生大宽带`[]🇭🇰 v2ray香港原生`[]🇸🇬 v2ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🇭🇰 v2ray香港 原生大宽带`[]🇭🇰 v2ray香港原生`[]🇸🇬 v2ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
