--- a/GS-SS.ini
+++ b/GS-SS.ini
@@ -32,25 +32,22 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ;策略组定义
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-
-
-custom_proxy_group=📹 YouTube`select`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 v2ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择``[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 V2Ray香港原生大宽带`[]🇭🇰 V2Ray香港原生`[]🇸🇬 V2Ray新加坡原生IP`[]🇺🇲 V2Ray美国原生`[]🇬🇧 V2Ray英国原生IP`[]🇨🇳 台湾`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇬🇧 英国`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=💧 Copilot`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=🍎 Apple`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=♻️ Speedtest`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=🎞️ 国内媒体`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=🎯 全球直连`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
 
 
 ;启用自定义规则集
