--- a/GS-SS.ini
+++ b/GS-SS.ini
@@ -45,7 +45,7 @@ custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray
 custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
 custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
-custom_proxy_group=🎞️ 国内媒体`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
+custom_proxy_group=🎞️ 国内媒体`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
 custom_proxy_group=🎯 全球直连`select`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[VMess] 🇭🇰 V2Ray香港原生大宽带`[VMess] 🇭🇰 V2Ray香港原生`[VMess] 🇸🇬 V2Ray新加坡原生IP`[VMess] 🇺🇲 V2Ray美国原生`[VMess] 🇬🇧 V2Ray英国原生IP`[VMess] 🇨🇳 台湾`[VMess] 🇸🇬 新加坡`[VMess] 🇯🇵 日本`[VMess] 🇬🇧 英国`[VMess] 🐸 手动切换`[VMess] DIRECT
 
