--- a/GS-SS..ini
+++ b/GS-SS..ini
@@ -35,7 +35,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[] 🇭🇰 V2Ray香港原生大宽带`[] 🇭🇰 V2Ray香港原生`[] 🇸🇬 V2Ray新加坡原生IP`[] 🇺🇲 V2Ray美国原生`[] 🇬🇧 V2Ray英国原生IP`[] 🇨🇳 台湾`[] 🇸🇬 新加坡`[] 🇯🇵 日本`[] 🇬🇧 英国`[] 🐸 手动切换`[] DIRECT
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[] 🇭🇰 V2Ray香港原生大宽带`[] 🇭🇰 V2Ray香港原生`[] 🇸🇬 V2Ray新加坡原生IP`[] 🇺🇲 V2Ray美国原生`[] 🇬🇧 V2Ray英国原生IP`[] 🇨🇳 台湾`[] 🇸🇬 新加坡`[] 🇯🇵 日本`[] 🇬🇧 英国`[] 🐸 手动切换`[] DIRECT
 custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[] 🇭🇰 V2Ray香港原生大宽带`[] 🇭🇰 V2Ray香港原生`[] 🇸🇬 V2Ray新加坡原生IP`[] 🇺🇲 V2Ray美国原生`[] 🇬🇧 V2Ray英国原生IP`[] 🇨🇳 台湾`[] 🇸🇬 新加坡`[] 🇯🇵 日本`[] 🇬🇧 英国`[] 🐸 手动切换`[] DIRECT
-custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[] 🇭🇰 V2Ray香港原生大宽带`[] 🇭🇰 V2Ray香港原生`[] 🇸🇬 V2Ray新加坡原生IP`[] 🇺🇲 V2Ray美国原生`[] 🇬🇧 V2Ray英国原生IP`[] 🇨🇳 台湾`[] 🇸🇬 新加坡`[] 🇯🇵 日本`[] 🇬🇧 英国`[] 🐸 手动切换`[] DIRECT`[]🚀 节点选择`[] 🇭🇰 V2Ray香港原生大宽带`[] 🇭🇰 V2Ray香港原生`[] 🇸🇬 V2Ray新加坡原生IP`[] 🇺🇲 V2Ray美国原生`[] 🇬🇧 V2Ray英国原生IP`[] 🇨🇳 台湾`[] 🇸🇬 新加坡`[] 🇯🇵 日本`[] 🇬🇧 英国`[] 🐸 手动切换`[] DIRECT
+custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[] 🇭🇰 V2Ray香港原生大宽带`[] 🇭🇰 V2Ray香港原生`[] 🇸🇬 V2Ray新加坡原生IP`[] 🇺🇲 V2Ray美国原生`[] 🇬🇧 V2Ray英国原生IP`[] 🇨🇳 台湾`[] 🇸🇬 新加坡`[] 🇯🇵 日本`[] 🇬🇧 英国`[] 🐸 手动切换`[] DIRECT`[]🚀 节点选择
 custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[] 🇭🇰 V2Ray香港原生大宽带`[] 🇭🇰 V2Ray香港原生`[] 🇸🇬 V2Ray新加坡原生IP`[] 🇺🇲 V2Ray美国原生`[] 🇬🇧 V2Ray英国原生IP`[] 🇨🇳 台湾`[] 🇸🇬 新加坡`[] 🇯🇵 日本`[] 🇬🇧 英国`[] 🐸 手动切换`[] DIRECT
 custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[] 🇭🇰 V2Ray香港原生大宽带`[] 🇭🇰 V2Ray香港原生`[] 🇸🇬 V2Ray新加坡原生IP`[] 🇺🇲 V2Ray美国原生`[] 🇬🇧 V2Ray英国原生IP`[] 🇨🇳 台湾`[] 🇸🇬 新加坡`[] 🇯🇵 日本`[] 🇬🇧 英国`[] 🐸 手动切换`[] DIRECT
 custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[] 🇭🇰 V2Ray香港原生大宽带`[] 🇭🇰 V2Ray香港原生`[] 🇸🇬 V2Ray新加坡原生IP`[] 🇺🇲 V2Ray美国原生`[] 🇬🇧 V2Ray英国原生IP`[] 🇨🇳 台湾`[] 🇸🇬 新加坡`[] 🇯🇵 日本`[] 🇬🇧 英国`[] 🐸 手动切换`[] DIRECT
